--- a/css/footer.css
+++ b/css/footer.css
@@ -16,6 +16,7 @@ display: grid;
     display: flex;
     justify-content: center;
     align-items: center;
+    justify-self: center;
 }
 
 .footer .socials {
