--- a/css/footer.css
+++ b/css/footer.css
@@ -2,6 +2,7 @@
     position: relative;
     padding: 20px;
     background: #5B21B6;
+    font-size: 20px;
 display: grid;
     grid-template-areas:
         "logo socials"
